--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,50 @@
 body {
-  margin: 2rem;
+  margin: 0;
 }
 
-img {
-  max-width: 100%;
-  border-radius: 0.5rem;
-}
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-h1 {
-  font-size: 1.4rem;
-}
-
-.App {
+.container {
   display: flex;
-  flex-direction: column;
-  max-width: 40rem;
-  margin: 0 auto;
-  min-height: calc(100vh + 10rem);
+  width: 100%;
+  height: 100vh;
+  justify-content: center;
 }
 
-.content {
-  flex: 1;
+.div-input {
+  text-align: center;
 }
 
-.animeLeft {
-  transform: translateX(-20px);
-  opacity: 0;
-  animation: animeLeft 0.3s forwards;
+.list-container {
+  background: #faf6ed;
+  height: 100vh;
+  width: 50%;
 }
 
-@keyframes animeLeft {
-  to {
-    transform: initial;
-    opacity: initial;
-  }
+.list-container,
+input {
+  align-items: center;
+  padding: 0.7rem;
 }
 
-.loading {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  border: 10px solid #ccc;
-  border-right-color: transparent;
-  animation: loading 1s infinite;
+input {
+  border: solid 2px #ff383d;
+  text-align: center;
+  font-size: 1.8rem;
 }
 
-@keyframes loading {
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  border: solid 0;
+  border-radius: 46px;
+  padding: 0.7rem 1.2rem;
+  background: #ff383d;
+  color: #ffffff;
+  font-size: 1rem;
+  margin-left: 20px;
+}
+
+ul li {
+  list-style: none;
+  font-size: 1.9rem;
+  text-align: center;
+  margin-top: 30px;
+  margin-left: -55px;
 }
